@@ -2078,6 +2078,12 @@ static const char *const scheduler_enums[] = {
   schedlock_replay,
   nullptr
 };
+
+static struct {
+  /* If true, scheduler locking is on during inferior calls.  */
+  bool eval = true;
+} scheduler_locking;
+
 static const char *scheduler_mode = schedlock_replay;
 static void
 show_scheduler_mode (struct ui_file *file, int from_tty,
@@ -2128,6 +2134,7 @@ ptid_t
 user_visible_resume_ptid (int step)
 {
   ptid_t resume_ptid;
+  thread_info *tp = inferior_thread ();
 
   if (non_stop)
     {
@@ -2136,7 +2143,8 @@ user_visible_resume_ptid (int step)
       resume_ptid = inferior_ptid;
     }
   else if ((scheduler_mode == schedlock_on)
-	   || (scheduler_mode == schedlock_step && step))
+	   || (scheduler_mode == schedlock_step && step)
+	   || (scheduler_locking.eval && tp->control.in_infcall))
     {
       /* User-settable 'scheduler' mode requires solo thread
 	 resume.  */
@@ -2842,8 +2850,7 @@ thread_still_needs_step_over (struct thread_info *tp)
   return what;
 }
 
-/* Returns true if scheduler locking applies.  STEP indicates whether
-   we're about to do a step/next-like command to a thread.  */
+/* Returns true if scheduler locking applies to thread TP.  */
 
 static bool
 schedlock_applies (struct thread_info *tp)
@@ -2853,7 +2860,8 @@ schedlock_applies (struct thread_info *tp)
 	      && tp->control.stepping_command)
 	  || (scheduler_mode == schedlock_replay
 	      && target_record_will_replay (minus_one_ptid,
-					    execution_direction)));
+					    execution_direction))
+	   || (scheduler_locking.eval && tp->control.in_infcall));
 }
 
 /* Set process_stratum_target::COMMIT_RESUMED_STATE in all target
@@ -9540,6 +9548,14 @@ infrun_thread_ptid_changed ()
 
 #endif /* GDB_SELF_TEST */
 
+static void
+show_schedlock_eval (struct ui_file *file, int from_tty,
+		     struct cmd_list_element *c, const char *value)
+{
+  gdb_printf (file, _("Scheduler locking during expression "
+		      "evaluations is %s.\n"), value);
+}
+
 void _initialize_infrun ();
 void
 _initialize_infrun ()
@@ -9739,6 +9755,17 @@ replay == scheduler locked in replay mode and unlocked during normal execution."
 			set_schedlock_func,	/* traps on target vector */
 			show_scheduler_mode,
 			&setlist, &showlist);
+
+  add_setshow_boolean_cmd ("scheduler-locking-eval", class_run,
+			  &scheduler_locking.eval, _("\
+Set mode for locking scheduler during expression evaluations."), _("\
+Show mode for locking scheduler during expression evaluations."), _("\
+off == no locking (threads may preempt during expression evaluations).\n\
+on  == no thread except the current thread may run during expression\n\
+       evaluations."),
+			  NULL,
+			  show_schedlock_eval,
+			  &setlist, &showlist);
 
   add_setshow_boolean_cmd ("schedule-multiple", class_run, &sched_multi, _("\
 Set mode for resuming threads of all processes."), _("\
